# PPN_CTS

./:  plot-simulation.gp  .gitignore  CMakeCache.txt  CMakeLists.txt  Client.cpp  Client.h  ClientHandler.cpp  Crypto.h  Install.sh  Logger.cpp  Main.cpp  Main_Cli.cpp  Makefile  README.md  SRD-BTC.cpp  SRD-BTC.hpp  Server.cpp  Server.h  bench.sh  bot.cpp  bot.hpp  ca.key  client.crt  client.key  cmake_install.cmake  configFile.csv  log.csv  main  main_cli  main_serv  plot-simulation.gp  rootCA.crt  run_cli.sh  server.crt  server.key  stop_serv.sh
FineTrading/: CMakeLists.txt  PlotResults.py  results.csv
FineTrading/headers/: Bollinger.h  CryptoData.h  Portfolio.h  Strategy.h
FineTrading/src/: Bollinger.cpp  CryptoData.cpp  Portfolio.cpp  Strategy.cpp  main.cpp
documents/annexes/: SRD-BTC.xlsx
documents/annexes/benchmark/: Benchmark.txt  script.py
exec/: Test_Cli  Test_Serv
src/: Grafana.sh  config.yml
src/code/: Benchmark.cpp  Bot.cpp  BotSession.cpp  CMakeLists.txt  Client.cpp  ClientAuthenticator.cpp  ClientHandler.cpp  ClientInitiator.cpp  ClientSession.cpp  Client_test.cpp  Crypto.cpp  Global.cpp  LogManager.cpp  Logger.cpp  Main.cpp  Main_Cli.cpp  Main_Serv.cpp  Main_Test.cpp  Market.cpp  Monitoring.cpp  Portfolio.cpp  SRD-BTC.cpp  Server.cpp  ServerConnection.cpp  Server_Transaction.cpp  Serveur.cpp  Transaction.cpp  TransactionQueue.cpp  Utils.cpp  Wallet.cpp  app.py  benc_transac  bench  bench_conn.py  bench_transaction.cpp  benchmark_results.csv  bot.cpp  crypto_config.txt  global.cpp  index.html  (+5 more)
src/data/: SRD-BTC - Feuille 1.csv  btc_data.csv  btc_sec_values copy.csv  btc_sec_values.csv  global_transactions.csv  srd_btc_values.csv  transactions.txt  transactions.xlsx  users.txt
src/data/transactions.csv/: mon_client_id_unique.wallet
src/data/wallets/: 6703.wallet  Client1.wallet  benchmark.wallet  benchmark1.wallet  benchmark2.wallet  benchmark3.wallet  benchmark4.wallet  benchmark5.wallet  premier_client_test.wallet
src/headers/: Benchmark.h  Bot.h  BotSession.h  Client.h  ClientAuthenticator.h  ClientHandler.h  ClientInitiator.h  ClientSession.h  Crypto.h  Global.h  LogManager.h  Logger.h  Market.h  Monitoring.h  OpenSSLDeleters.h  Portfolio.h  SRD_BTC.h  Server.h  ServerConnection.h  Server_Transaction.h  Transaction.h  TransactionQueue.h  Utils.h  Wallet.h  bot.h  global.h
